# HellBender

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  index.html
doc/: CMakeLists.txt  Gemfile  publish_doc.sh
doc/source/: index.md
doc/source/includes/: _modules.md
src/: CMakeLists.txt
src/Core/: AbstractMetaObject.h  AbstractMetaObjectBase.cpp  AbstractMetaObjectBase.h  CMakeLists.txt  Core.h  MachineConfig.cpp  MachineConfig.h  MetaObject.h  SharedLibrary.cpp  SharedLibrary.h  SharedLibrary_UNIX.cpp  SharedLibrary_UNIX.h
src/Modules/: CMakeLists.txt
src/Modules/IO/ModBusClient/: CMakeLists.txt  ModBusClient.cpp  ModBusClient.h
src/Modules/VisionSystem/: CMakeLists.txt
src/Modules/VisionSystem/OCVCamera/: CMakeLists.txt  OCVCamera.cpp  OCVCamera.h
src/Modules/VisionSystem/VSCore/: AbstractImageSink.h  AbstractImageSource.cpp  AbstractImageSource.h  CMakeLists.txt  ImageSinkBase.cpp  ImageSinkBase.h  ImageSourceBase.cpp  ImageSourceBase.h
stylesheets/: print.css  screen.css
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt  InvalidConfig.xml  MachineConfigTest.cpp  MetaObjectTest.cpp  SharedLibraryTest.cpp  TestLib.cpp  ValidConfig.xml  main.cpp
tests/Modules/IO/: CMakeLists.txt
tests/Modules/IO/ModBusClient/: CMakeLists.txt  ModBusClientTest.cpp  main.cpp
tests/Modules/VisionSystem/: CMakeLists.txt
tests/Modules/VisionSystem/OCVCamera/: CMakeLists.txt  ImageCounterSink.h  OCVCameraTest.cpp
